--- a/.github/workflows/ci_ui.yml
+++ b/.github/workflows/ci_ui.yml
@@ -45,5 +45,5 @@ jobs:
       with:
         github_token: ${{ secrets.GITHUB_TOKEN }} # GitHub automatically provides this token
         publish_dir: ./ui/dist # Directory containing the built static files (adjust if not 'dist')
-        # Optional: Add a CNAME if you have a custom domain
-        # cname: example.com
+        publish_branch: gh-pages # <--- Explicitly state the target branch
+        force_orphan: true # <--- Useful for ensuring a clean deploy history
