--- a/.github/workflows/ci_ui.yml
+++ b/.github/workflows/ci_ui.yml
@@ -44,6 +44,7 @@ jobs:
       uses: peaceiris/actions-gh-pages@v3 # Use a popular GitHub Pages deploy action
       with:
         github_token: ${{ secrets.GITHUB_TOKEN }} # GitHub automatically provides this token
-        publish_dir: ./ui/dist # Directory containing the built static files (adjust if not 'dist')
+        publish_dir: dist # Directory containing the built static files (adjust if not 'dist')
         publish_branch: gh-pages # <--- Explicitly state the target branch
         force_orphan: true # <--- Useful for ensuring a clean deploy history
+      working-directory: ./ui # <--- Add this line
