--- a/.github/workflows/ci_ui.yml
+++ b/.github/workflows/ci_ui.yml
@@ -39,13 +39,14 @@ jobs:
     #  working-directory: ./ui
       # run: npm test -- --watchAll=false # Run tests, exit after completion
 
-    - name: Deploy to GitHub Pages # <--- This is a step definition (starts with -)
-      if: github.ref == 'refs/heads/main' # <--- Step-level key (aligned with name, uses, etc.)
-      uses: peaceiris/actions-gh-pages@v3 # <--- Step-level key (aligned with name, if, etc.)
-      with: # <--- Parameters for the 'uses' action (indented further)
+    - name: Deploy to GitHub Pages # <--- This is a step definition
+      if: github.ref == 'refs/heads/main' # <--- Step-level key
+      uses: peaceiris/actions-gh-pages@v3 # <--- Step-level key
+      with: # <--- Parameters for the 'uses' action
         github_token: ${{ secrets.GITHUB_TOKEN }}
-        publish_dir: dist
-        publish_branch: gh-pages
-        force_orphan: true
+        publish_dir: dist # Directory containing the built static files (adjust if not 'dist')
+        publish_branch: gh-pages # <--- Explicitly state the target branch
+        force_orphan: true # <--- Useful for ensuring a clean deploy history
+        # Optional: Add a CNAME if you have a custom domain
         # cname: example.com
-      working-directory: ./ui # <--- CORRECT INDENTATION: Step-level key (aligned with uses:, if:)
+      working-directory: ./ui # <--- Step-level key (ALIGNED WITH 'uses:' and 'if:')
